# target-athena

./: pyproject.toml
target_athena/: athena.py  s3.py  utils.py
tests/integration/: test_target_athena.py  utils.py
tests/unit/: test_unit.py
