[tool.poetry]
name = "target-athena"
version = "0.0.1"
description = "`target-athena` is Singer tap for Athena, built with the Singer SDK."
authors = ["FirstName LastName"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
boto3 = "^1.34.58"
pyathena = "^3.3.0"
awswrangler = "^3.7.1"

# singer-sdk = {path = "../sdk", develop = true}
singer-sdk = "^0.36.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
nose = "^1.3.7"
python-dotenv = "^1.0.1"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-athena = 'target_athena.target:cli'
